# shinyhub

./: .air.toml  .dockerignore  .gitignore  .goreleaser.yaml  .updrc.toml  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  Dockerfile.goreleaser  Makefile  PRIVACY.md  README.md  SECURITY.md  go.mod  go.sum  package-lock.json  package.json  shinyhost.yaml.example  shinyhub.yaml.example
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
cli/: apps.go  data.go  data_test.go  deploy.go  deploy_test.go  login.go  root.go  schedule.go  schedule_test.go  share.go
cmd/shiny/: main.go
cmd/shinyhost/: main.go
cmd/shinyhub/: branding_routes_test.go  buildruntime_test.go  clustered_guard_test.go  failover_integration_test.go  failover_reconnect_test.go  killactive_integration_test.go  main.go  main_config_test.go  main_test.go  metrics_listener_test.go  readiness.go  readiness_handlers.go  readiness_handlers_test.go  readiness_test.go  rotate_secret_test.go  schema_conformance_test.go  worker.go  worker_test.go
deploy/docker-compose/: README.md  compose.yaml  shinyhub.yaml
deploy/systemd/: shinyhub.service
deploy/terraform/: .gitignore
docs/: app-performance.md  branding.md  data.md  environment.md  fleet.md  identity.md  isolation.md  load-testing.md  manifest.md  metrics.md  native-oidc.md  scaling.md  schedules.md  secret-rotation.md  tracing.md  zero-downtime-upgrades.md
docs/deployment/: ha-data-plane.md  sqlite-to-postgres.md
docs/recipes/: bundle-filtering.md  dash.md  output-caching.md  remote-worker.md  streamlit.md
docs/reverse-proxy/: caddy.md  deploying-behind-a-proxy.md  nginx.md  oidc-bridge.md
examples/: README.md
examples/dash-demo/: README.md  app.py  requirements.txt  shinyhub.toml
examples/identity-demo/: README.md  app.py  requirements.txt  shinyhub.toml
examples/streamlit-demo/: README.md  app.py  requirements.txt  shinyhub.toml
internal/access/: middleware.go  middleware_test.go  neverdeployed.go  neverdeployed_test.go
internal/admission/: cores.go  cores_linux.go  cores_other.go  cores_test.go  fairness.go  fairness_test.go  pacer.go  pacer_test.go  watermark.go  watermark_test.go
internal/api/: access_hardening_test.go  access_log.go  access_log_test.go  apps.go  apps_autoscale_json_test.go  apps_autoscale_test.go  apps_lost_reason_test.go  apps_test.go  apps_worker_patch_test.go  audit.go  audit_detail_test.go  audit_operator_test.go  audit_test.go  auth.go  auth_test.go  authorization.go  authorization_test.go  autoscale_status_test.go  batch_metrics_test.go  branding.go  branding_test.go  bundle_fetch_shared_test.go  bundle_handler.go  bundle_handler_test.go  colocated_wiring_test.go  create_ratelimit_test.go  data.go  data_internal_test.go  data_lock_test.go  data_test.go  deploy_failure_kind_test.go  deploy_inflight_test.go  deploy_metadata_test.go  deploy_metrics_test.go  deploy_pending_leak_test.go  deploy_quota_test.go  deploy_resource_revert_test.go  deploy_statemachine_test.go  deployfail.go  deployfail_test.go  (+94 more)
internal/appenv/: appenv.go  appenv_test.go
internal/auth/: auth.go  auth_test.go  csrf.go  csrf_bypass_test.go  csrf_test.go  deploytoken.go  deploytoken_scope_test.go  deploytoken_test.go  forward_auth.go  forward_auth_strip_test.go  forward_auth_test.go  group_mapping.go  group_mapping_test.go  hardening_test.go  middleware.go  middleware_test.go  oauth_state.go  session.go  session_epoch_test.go  session_test.go
internal/autoscale/: auditor.go  controller.go  controller_test.go  decision.go  decision_test.go  metrics_iface.go
internal/autoscalespec/: autoscalespec.go  autoscalespec_test.go
internal/backup/: backup.go  backup_perm_test.go  backup_postgres_test.go  backup_test.go  postgres.go  postgres_internal_test.go  restore_guard_test.go  verify_test.go
internal/bundle/: digest.go  digest_test.go  filter.go  filter_test.go  gen.go
internal/bundletoken/: bundletoken.go  bundletoken_test.go
internal/cli/: access_alias_test.go  access_grant_warn_test.go  actionout.go  apps.go  (+122 more)
loadtest/: coldstart.js  hol.js  lib.js  sessions.js
packaging/python/: README.md  hatch_build.py  pyproject.toml
packaging/python-identity/: README.md  pyproject.toml
packaging/python-identity/src/shinyhub_identity/: __init__.py
packaging/python-identity/tests/: test_current_user.py  test_dev_identity.py  test_diagnostics.py
packaging/python/src/shinyhub/: __init__.py  __main__.py
scripts/: ha-failover-e2e.sh  handoff-e2e.sh  install.sh  postgres-test.sh  remote-e2e.sh  skill-lint.sh  skill-smoke.sh  wait-http.sh  wait-log.sh
(+646 files in other folders)
