[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shinyhub"
dynamic = ["version"]
description = "Self-hosted platform for deploying and managing Shiny apps."
readme = "../../README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Ruben J. Jongejan", email = "ruben.jongejan@gmail.com" },
]
keywords = ["shiny", "shinyhub", "deployment", "posit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage   = "https://github.com/rvben/shinyhub"
Repository = "https://github.com/rvben/shinyhub"
Issues     = "https://github.com/rvben/shinyhub/issues"

[project.scripts]
shinyhub = "shinyhub.__main__:main"

# Metadata hook computes the dynamic version from SHINYHUB_WHEEL_VERSION.
[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/shinyhub"]
# force-include is the hatchling escape hatch for files outside the
# normal package-glob walk. CI writes the binary here right before
# `python -m build` runs.
force-include = { "src/shinyhub/_binary/shinyhub" = "shinyhub/_binary/shinyhub" }

# Build hook sets the platform tag from SHINYHUB_WHEEL_PLATFORM.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"
