[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shinyhub"
dynamic = ["version"]
description = "Self-hosted platform for deploying and managing Shiny apps."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [
  { name = "Ruben J. Jongejan", email = "ruben.jongejan@gmail.com" },
]
keywords = ["shiny", "shinyhub", "deployment", "posit"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries :: Application Frameworks",
]

[project.urls]
Homepage   = "https://github.com/rvben/shinyhub"
Repository = "https://github.com/rvben/shinyhub"
Issues     = "https://github.com/rvben/shinyhub/issues"

[project.scripts]
shinyhub = "shinyhub.__main__:main"

# Metadata hook computes the dynamic version from SHINYHUB_WHEEL_VERSION.
[tool.hatch.metadata.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["src/shinyhub"]

# Build hook owns binary inclusion + platform tag. It raises when the
# binary is absent, which is what pip sees when falling back to sdist
# on an unsupported platform.
[tool.hatch.build.targets.wheel.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.sdist]
include = [
  "src/shinyhub",
  "pyproject.toml",
  "hatch_build.py",
  "README.md",
]
# The binary is wheel-only. Keeping it out of the sdist is what makes
# the sdist a usable stub: pip falls back to building a wheel from it
# on unsupported platforms, the wheel build detects the missing binary,
# and the build fails with a clear error.
exclude = [
  "src/shinyhub/_binary/shinyhub",
]
